[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-api-unofficial"
version = "0.1.0"
description = "Unofficial TikTok API library: scrape video/user metadata and optionally download media (no API key required)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "browser_cookie3>=0.19.0",
]
authors = [{ name = "8dazo" }]
keywords = ["tiktok", "api", "scraper", "metadata", "unofficial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
py-modules = ["tiktok_api"]
